pkg/lang/testdata/ub/constraints/valid/check-predicate-for-each-unset-iterable.ub
constraints: [
  { kind: predicate, @for-each: var.replicas, when: true, require: false },
]
