pkg/lang/testdata/ub/constraints/invalid/for-each-core-binding.ub
constraints: [
  {
    kind: predicate
    @for-each: [ { @core: var.rules }, ]
    when:    true
    require: true
  },
]
